// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate (deprecated rules) replaced by ESLint core rule uses correct replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) replaced by ESLint core rule uses correct replacement rule link 2`] = `
"# Description (\`test/no-foo\`)

❌ This rule is deprecated. It was replaced by [\`no-unused-vars\`](https://eslint.org/docs/latest/rules/no-unused-vars).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) replaced by third-party plugin rule uses correct replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) replaced by third-party plugin rule uses correct replacement rule link 2`] = `
"# Description (\`test/no-foo\`)

❌ This rule is deprecated. It was replaced by \`other-plugin/no-unused-vars\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) replaced by third-party plugin rule with same rule name as one of our rules uses correct replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) replaced by third-party plugin rule with same rule name as one of our rules uses correct replacement rule link 2`] = `
"# Description (\`test/no-foo\`)

❌ This rule is deprecated. It was replaced by \`other-plugin/no-foo\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) several deprecated rules updates the documentation 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description. | ❌  |
| [no-baz](docs/rules/no-baz.md) | Description. | ❌  |
| [no-biz](docs/rules/no-biz.md) | Description. |    |
| [no-boz](docs/rules/no-boz.md) | Description. | ❌  |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) several deprecated rules updates the documentation 2`] = `
"# Description (\`test/no-foo\`)

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](no-bar.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) several deprecated rules updates the documentation 3`] = `
"# Description (\`test/no-bar\`)

❌ This rule is deprecated.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) several deprecated rules updates the documentation 4`] = `
"# Description (\`test/no-baz\`)

❌ This rule is deprecated.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) several deprecated rules updates the documentation 5`] = `
"# Description (\`test/no-biz\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) several deprecated rules updates the documentation 6`] = `
"# Description (\`test/no-boz\`)

❌ This rule is deprecated. It was replaced by [\`test/no-baz\`](no-baz.md), [\`test/no-biz\`](no-biz.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) using prefix ahead of replacement rule name uses correct replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description. |    |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) using prefix ahead of replacement rule name uses correct replacement rule link 2`] = `
"# Description (\`test/no-foo\`)

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](no-bar.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) using prefix ahead of replacement rule name uses correct replacement rule link 3`] = `
"# Description (\`test/no-bar\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with --path-rule-doc has the correct links, especially replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                              | Description  | ❌  |
| :------------------------------------------------ | :----------- | :- |
| [category/no-bar](docs/category/no-bar/README.md) | Description. | ❌  |
| [category/no-foo](docs/category/no-foo/README.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) with --path-rule-doc has the correct links, especially replacement rule link 2`] = `
"# Description (\`test/category/no-foo\`)

❌ This rule is deprecated. It was replaced by [\`test/category/no-bar\`](../no-bar/README.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with --path-rule-doc has the correct links, especially replacement rule link 3`] = `
"# Description (\`test/category/no-bar\`)

❌ This rule is deprecated. It was replaced by [\`test/category/no-foo\`](../no-foo/README.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with nested rule names has the correct links, especially replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                             | Description  | ❌  |
| :----------------------------------------------- | :----------- | :- |
| [category/no-bar](docs/rules/category/no-bar.md) | Description. | ❌  |
| [category/no-foo](docs/rules/category/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) with nested rule names has the correct links, especially replacement rule link 2`] = `
"# Description (\`test/category/no-foo\`)

❌ This rule is deprecated. It was replaced by [\`test/category/no-bar\`](no-bar.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with nested rule names has the correct links, especially replacement rule link 3`] = `
"# Description (\`test/category/no-bar\`)

❌ This rule is deprecated. It was replaced by [\`test/category/no-foo\`](no-foo.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with new DeprecatedInfo format (deprecated as object) updates the documentation with new format 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description. |    |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) with new DeprecatedInfo format (deprecated as object) updates the documentation with new format 2`] = `
"# Description (\`test/no-foo\`)

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](no-bar.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with new DeprecatedInfo format (deprecated as object) updates the documentation with new format 3`] = `
"# Description (\`test/no-bar\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with new DeprecatedInfo format - external plugin replacement updates the documentation with external plugin replacement 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) with new DeprecatedInfo format - external plugin replacement updates the documentation with external plugin replacement 2`] = `
"# Description (\`test/no-foo\`)

❌ This rule is deprecated. It was replaced by \`other-plugin/no-foo\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with new DeprecatedInfo format - malformed replacement info ignores malformed replacement info and shows valid ones 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description. |    |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) with new DeprecatedInfo format - malformed replacement info ignores malformed replacement info and shows valid ones 2`] = `
"# Description (\`test/no-foo\`)

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](no-bar.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with new DeprecatedInfo format - multiple replacements updates the documentation with multiple replacements 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description. |    |
| [no-baz](docs/rules/no-baz.md) | Description. |    |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) with new DeprecatedInfo format - multiple replacements updates the documentation with multiple replacements 2`] = `
"# Description (\`test/no-foo\`)

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](no-bar.md), [\`test/no-baz\`](no-baz.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with new DeprecatedInfo format - no replacement updates the documentation without replacement rules 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) with new DeprecatedInfo format - no replacement updates the documentation without replacement rules 2`] = `
"# Description (\`test/no-foo\`)

❌ This rule is deprecated.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with no rule doc but --ignore-deprecated-rules omits the rule from the README and does not try to update its non-existent rule doc 1`] = `
"<!-- begin auto-generated rules list -->

| Name |
| :--- |

<!-- end auto-generated rules list -->"
`;
